--- a/src/content/chainlink-nodes/v1/running-a-chainlink-node.mdx
+++ b/src/content/chainlink-nodes/v1/running-a-chainlink-node.mdx
@@ -68,147 +68,147 @@ This guide will teach you how to run a Chainlink node locally using [Docker](#us
 
 #### Configure your node
 
-1.  Create a local directory to hold the Chainlink data:
+1. Create a local directory to hold the Chainlink data:
 
-    {/* prettier-ignore */}
-    {" "}
-
-    <Tabs client:visible>
+   {/* prettier-ignore */}
+   <Tabs client:visible>
       <Fragment slot="tab.1">Sepolia</Fragment>
       <Fragment slot="tab.2">Goerli</Fragment>
-      <Fragment slot="panel.1">```shell Sepolia mkdir ~/.chainlink-sepolia ```</Fragment>
-      <Fragment slot="panel.2">```shell Goerli mkdir ~/.chainlink-goerli ```</Fragment>
-    </Tabs>
-
-1.  Run the following as a command to create a `config.toml` file and populate with variables specific to the network you're running on. For a full list of available configuration variables, see the [Node Config](/chainlink-nodes/v1/node-config) page.
-    Be sure to update the value for `CHANGEME` to the value given by your [external Ethereum provider](/chainlink-nodes/resources/run-an-ethereum-client/#external-services).
-
-    {/* prettier-ignore */}
-       <Tabs client:visible>
-      <Fragment slot="tab.1">Sepolia
+      <Fragment slot="panel.1">
+      ```shell Sepolia
+      mkdir ~/.chainlink-sepolia
+      ```
       </Fragment>
-      <Fragment slot="tab.2">Goerli
+      <Fragment slot="panel.2">
+      ```shell Goerli
+      mkdir ~/.chainlink-goerli
+      ```
       </Fragment>
+   </Tabs>
+
+1. Run the following as a command to create a `config.toml` file and populate with variables specific to the network you're running on. For a full list of available configuration variables, see the [Node Config](/chainlink-nodes/v1/node-config) page.
+   Be sure to update the value for `CHANGEME` to the value given by your [external Ethereum provider](/chainlink-nodes/resources/run-an-ethereum-client/#external-services).
+
+   {/* prettier-ignore */}
+   <Tabs client:visible>
+      <Fragment slot="tab.1">Sepolia</Fragment>
+      <Fragment slot="tab.2">Goerli</Fragment>
       <Fragment slot="panel.1">
       ```shell Sepolia
       echo "[Log]
       Level = 'warn'
 
-    [WebServer]
-    AllowOrigins = '\*'
-    SecureCookies = false
+      [WebServer]
+      AllowOrigins = '\*'
+      SecureCookies = false
 
-    [WebServer.TLS]
-    HTTPSPort = 0
+      [WebServer.TLS]
+      HTTPSPort = 0
 
-    [[EVM]]
-    ChainID = '11155111'
+      [[EVM]]
+      ChainID = '11155111'
 
-    [[EVM.Nodes]]
-    Name = 'Sepolia'
-    WSURL = 'wss://CHANGE_ME'
-    HTTPURL = 'https://CHANGE_ME'
-    " > ~/.chainlink-sepolia/config.toml
+      [[EVM.Nodes]]
+      Name = 'Sepolia'
+      WSURL = 'wss://CHANGE_ME'
+      HTTPURL = 'https://CHANGE_ME'
+      " > ~/.chainlink-sepolia/config.toml
+      ```
+      </Fragment>
+      <Fragment slot="panel.2">
+      ```shell Goerli
+      echo "[Log]
+      Level = 'warn'
 
-    ````
-    </Fragment>
-    <Fragment slot="panel.2">
-    ```shell Goerli
-    echo "[Log]
-    Level = 'warn'
+      [WebServer]
+      AllowOrigins = '*'
+      SecureCookies = false
 
-    [WebServer]
-    AllowOrigins = '*'
-    SecureCookies = false
+      [WebServer.TLS]
+      HTTPSPort = 0
 
-    [WebServer.TLS]
-    HTTPSPort = 0
+      [[EVM]]
+      ChainID = '5'
 
-    [[EVM]]
-    ChainID = '5'
+      [[EVM.Nodes]]
+      Name = 'Goerli'
+      WSURL = 'wss://CHANGE_ME'
+      HTTPURL = 'https://CHANGE_ME'
+      " > ~/.chainlink-goerli/config.toml
+      ```
+      </Fragment>
+   </Tabs>
 
-    [[EVM.Nodes]]
-    Name = 'Goerli'
-    WSURL = 'wss://CHANGE_ME'
-    HTTPURL = 'https://CHANGE_ME'
-    " > ~/.chainlink-goerli/config.toml
-    ````
+1. Create a `secrets.toml` file with a keystore password and the URL to your database. Update the value for `mysecretpassword` to the chosen password in [Run PostgreSQL](#run-postgresql). Specify a complex keystore password. This will be your wallet password that you can use to unlock the keystore file generated for you.
 
-          </Fragment>
-
-    </Tabs>
-
-1.  Create a `secrets.toml` file with a keystore password and the URL to your database. Update the value for `mysecretpassword` to the chosen password in [Run PostgreSQL](#run-postgresql). Specify a complex keystore password. This will be your wallet password that you can use to unlock the keystore file generated for you.
-
-    {/* prettier-ignore */}
-    {" "}
-
-    <Tabs client:visible>
+   {/* prettier-ignore */}
+   <Tabs client:visible>
       <Fragment slot="tab.1">Sepolia</Fragment>
       <Fragment slot="tab.2">Goerli</Fragment>
       <Fragment slot="panel.1">
-        ```shell Sepolia echo "[Password] Keystore = 'mysecretkeystorepassword' [Database] URL =
-        'postgresql://postgres:mysecretpassword@host.docker.internal:5432/postgres?sslmode=disable' " >
-        ~/.chainlink-sepolia/secrets.toml ```
+      ```shell Sepolia
+      echo "[Password]
+      Keystore = 'mysecretkeystorepassword'
+      [Database]
+      URL = 'postgresql://postgres:mysecretpassword@host.docker.internal:5432/postgres?sslmode=disable'
+      " > ~/.chainlink-sepolia/secrets.toml
+      ```
       </Fragment>
       <Fragment slot="panel.2">
-        ```shell Goerli echo "[Password] Keystore = 'mysecretkeystorepassword' [Database] URL =
-        'postgresql://postgres:mysecretpassword@host.docker.internal:5432/postgres?sslmode=disable' " >
-        ~/.chainlink-goerli/secrets.toml ```
+      ```shell Goerli
+      echo "[Password]
+      Keystore = 'mysecretkeystorepassword'
+      [Database]
+      URL = 'postgresql://postgres:mysecretpassword@host.docker.internal:5432/postgres?sslmode=disable'
+      " > ~/.chainlink-goerli/secrets.toml
+      ```
       </Fragment>
-    </Tabs>
+   </Tabs>
 
-    {" "}
+   <Aside type="tip" title="Important">
+     Because you are testing locally, add `?sslmode=disable` to the end of your `DATABASE_URL`. However you should
+     _never_ do this on a production node.
+   </Aside>
 
-    <Aside type="tip" title="Important">
-      Because you are testing locally, add `?sslmode=disable` to the end of your `DATABASE_URL`. However you should
-      _never_ do this on a production node.
-    </Aside>
+1. Start the Chainlink Node. Now you can run the Docker image. Change the version number in `smartcontract/chainlink:2.0.0` with the version of the Docker image that you need to run. For most new nodes, use version `2.0.0` or later. Tag versions are available in the [Chainlink docker hub](https://hub.docker.com/r/smartcontract/chainlink/tags). _The `latest` version does not work._ Chainlink Nodes running `2.0.0` and later require the `-config` and `-secrets` flags after the `node` part of the command. Versions `1.13.1` and earlier require the `-config` and `-secrets` flags to be placed before the `node start` portion of the command.
 
-1.  Start the Chainlink Node. Now you can run the Docker image. Change the version number in `smartcontract/chainlink:2.0.0` with the version of the Docker image that you need to run. For most new nodes, use version `2.0.0` or later. Tag versions are available in the [Chainlink docker hub](https://hub.docker.com/r/smartcontract/chainlink/tags). _The `latest` version does not work._ Chainlink Nodes running `2.0.0` and later require the `-config` and `-secrets` flags after the `node` part of the command. Versions `1.13.1` and earlier require the `-config` and `-secrets` flags to be placed before the `node start` portion of the command.
+   {/* prettier-ignore */}
+   <Tabs client:visible>
+      <Fragment slot="tab.1">Sepolia</Fragment>
+      <Fragment slot="tab.2">Goerli</Fragment>
+      <Fragment slot="tab.3">Sepolia on Nodes \<=1.13.1</Fragment>
+      <Fragment slot="tab.4">Goerli on Nodes \<=1.13.1</Fragment>
+      <Fragment slot="panel.1">
+      ```shell Sepolia
+      cd ~/.chainlink-sepolia && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-sepolia:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:2.0.0 node -config /chainlink/config.toml -secrets /chainlink/secrets.toml start
+      ```
+      </Fragment>
+      <Fragment slot="panel.2">
+      ```shell Goerli
+      cd ~/.chainlink-goerli && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-goerli:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:2.0.0 node -config /chainlink/config.toml -secrets /chainlink/secrets.toml start
+      ```
+      </Fragment>
+      <Fragment slot="panel.3">
+      ```shell Sepolia
+      cd ~/.chainlink-sepolia && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-sepolia:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:1.13.1 -config /chainlink/config.toml -secrets /chainlink/secrets.toml node start
+      ```
+      </Fragment>
+      <Fragment slot="panel.4">
+      ```shell Goerli
+      cd ~/.chainlink-goerli && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-goerli:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:1.13.1 -config /chainlink/config.toml -secrets /chainlink/secrets.toml node start
+      ```
+      </Fragment>
+   </Tabs>
 
-            {/* prettier-ignore */}
+   The first time running the image, the node asks you to enter an API Email and Password. This will be used to expose the API for the GUI interface, and will be used every time you log into your node.
 
-              <Tabs client:visible>
+1. Check the container is running. Note the `6688` port is [published](https://docs.docker.com/config/containers/container-networking/#published-ports) `0.0.0.0:6688->6688/tcp` and therefore accessible outside of Docker.
 
-        <Fragment slot="tab.1">Sepolia</Fragment>
+   ```shell
+   docker ps -a -f name=chainlink
 
-    <Fragment slot="tab.2">Goerli</Fragment>
-<Fragment slot="tab.3">Sepolia on Nodes \<=1.13.1</Fragment>
-<Fragment slot="tab.4">Goerli on Nodes \<=1.13.1</Fragment>
-<Fragment slot="panel.1">
-
-```shell Sepolia
-cd ~/.chainlink-sepolia && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-sepolia:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:2.0.0 node -config /chainlink/config.toml -secrets /chainlink/secrets.toml start
-```
-
-   </Fragment>
-   <Fragment slot="panel.2">
-   ```shell Goerli
-   cd ~/.chainlink-goerli && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-goerli:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:2.0.0 node -config /chainlink/config.toml -secrets /chainlink/secrets.toml start
+   CONTAINER ID   IMAGE                            COMMAND                CREATED         STATUS                   PORTS                    NAMES
+   feff39f340d6   smartcontract/chainlink:1.13.0   "chainlink node start" 4 minutes ago   Up 4 minutes (healthy)   0.0.0.0:6688->6688/tcp   chainlink
    ```
-   </Fragment>
-   <Fragment slot="panel.3">
-   ```shell Sepolia
-   cd ~/.chainlink-sepolia && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-sepolia:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:1.13.1 -config /chainlink/config.toml -secrets /chainlink/secrets.toml node start
-   ```
-   </Fragment>
-   <Fragment slot="panel.4">
-   ```shell Goerli
-   cd ~/.chainlink-goerli && docker run --platform linux/x86_64/v8 --name chainlink -v ~/.chainlink-goerli:/chainlink -it -p 6688:6688 --add-host=host.docker.internal:host-gateway smartcontract/chainlink:1.13.1 -config /chainlink/config.toml -secrets /chainlink/secrets.toml node start
-   ```
-   </Fragment>
-</Tabs>
 
-    The first time running the image, the node asks you to enter an API Email and Password. This will be used to expose the API for the GUI interface, and will be used every time you log into your node.
-
-1.  Check the container is running. Note the `6688` port is [published](https://docs.docker.com/config/containers/container-networking/#published-ports) `0.0.0.0:6688->6688/tcp` and therefore accessible outside of Docker.
-
-    ```shell
-    docker ps -a -f name=chainlink
-
-    CONTAINER ID   IMAGE                            COMMAND                CREATED         STATUS                   PORTS                    NAMES
-    feff39f340d6   smartcontract/chainlink:1.13.0   "chainlink node start" 4 minutes ago   Up 4 minutes (healthy)   0.0.0.0:6688->6688/tcp   chainlink
-    ```
-
-1.  You can now connect to your Chainlink node's UI interface by navigating to [http://localhost:6688](http://localhost:6688). If using a VPS, you can create an [SSH tunnel](https://www.howtogeek.com/168145/how-to-use-ssh-tunneling/) to your node for `6688:localhost:6688` to enable connectivity to the GUI. Typically this is done with `ssh -i $KEY $USER@$REMOTE-IP -L 6688:localhost:6688 -N`. An SSH tunnel is recommended over opening public-facing ports specific to the Chainlink node. See the [Security and Operation Best Practices](/chainlink-nodes/resources/best-security-practices) page for more details on securing your node.
+1. You can now connect to your Chainlink node's UI interface by navigating to [http://localhost:6688](http://localhost:6688). If using a VPS, you can create an [SSH tunnel](https://www.howtogeek.com/168145/how-to-use-ssh-tunneling/) to your node for `6688:localhost:6688` to enable connectivity to the GUI. Typically this is done with `ssh -i $KEY $USER@$REMOTE-IP -L 6688:localhost:6688 -N`. An SSH tunnel is recommended over opening public-facing ports specific to the Chainlink node. See the [Security and Operation Best Practices](/chainlink-nodes/resources/best-security-practices) page for more details on securing your node.
