--- a/src/pages/chainlink-nodes/v1/node-config/evm.mdx
+++ b/src/pages/chainlink-nodes/v1/node-config/evm.mdx
@@ -1,13 +1,11 @@
 ---
-layout: ../../../layouts/MainLayout.astro
+layout: ../../../../layouts/MainLayout.astro
 section: nodeOperator
 date: Last Modified
-title: "EVM settings of Node Config (TOML)"
+title: "EVM"
 ---
 
-This document describes EVM configuration parameters of the TOML format for configuration.
-
-## EVM
+This document describes the EVM settings of Node Config (TOML).
 
 EVM defaults depend on ChainID:
 
