--- a/src/pages/chainlink-nodes/v1/node-config/index.mdx
+++ b/src/pages/chainlink-nodes/v1/node-config/index.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/MainLayout.astro
+layout: ../../../../layouts/MainLayout.astro
 section: nodeOperator
 date: Last Modified
 title: "Node Config (TOML)"
@@ -9,9 +9,14 @@ title: "Node Config (TOML)"
 
 This document describes the TOML format for configuration.
 
-See the [EVM configuration options](/chainlink-nodes/v1/node-config-evm) page.
-
 Also see the [Secrets Config](/chainlink-nodes/v1/secrets-config) page.
+
+Other configuration options:<br/>
+[EVM](/chainlink-nodes/v1/node-config/evm)<br/>
+[Database](/chainlink-nodes/v1/node-config/database)<br/>
+[WebServer](/chainlink-nodes/v1/node-config/web-server)<br/>
+[Cosmos](/chainlink-nodes/v1/node-config/cosmos)<br/>
+[Solana](/chainlink-nodes/v1/node-config/solana)<br/>
 
 ## Example
 
@@ -102,215 +107,6 @@ UICSAKeys = false # Default
 ```
 
 UICSAKeys enables CSA Keys in the UI.
-
-## Database
-
-```toml
-[Database]
-DefaultIdleInTxSessionTimeout = '1h' # Default
-DefaultLockTimeout = '15s' # Default
-DefaultQueryTimeout = '10s' # Default
-LogQueries = false # Default
-MaxIdleConns = 10 # Default
-MaxOpenConns = 20 # Default
-MigrateOnStartup = true # Default
-```
-
-### DefaultIdleInTxSessionTimeout
-
-```toml
-DefaultIdleInTxSessionTimeout = '1h' # Default
-```
-
-DefaultIdleInTxSessionTimeout is the maximum time allowed for a transaction to be open and idle before timing out. See Postgres `idle_in_transaction_session_timeout` for more details.
-
-### DefaultLockTimeout
-
-```toml
-DefaultLockTimeout = '15s' # Default
-```
-
-DefaultLockTimeout is the maximum time allowed to wait for database lock of any kind before timing out. See Postgres `lock_timeout` for more details.
-
-### DefaultQueryTimeout
-
-```toml
-DefaultQueryTimeout = '10s' # Default
-```
-
-DefaultQueryTimeout is the maximum time allowed for standard queries before timing out.
-
-### LogQueries
-
-```toml
-LogQueries = false # Default
-```
-
-LogQueries tells the Chainlink node to log database queries made using the default logger. SQL statements will be logged at `debug` level. Not all statements can be logged. The best way to get a true log of all SQL statements is to enable SQL statement logging on Postgres.
-
-### MaxIdleConns
-
-```toml
-MaxIdleConns = 10 # Default
-```
-
-MaxIdleConns configures the maximum number of idle database connections that the Chainlink node will keep open. Think of this as the baseline number of database connections per Chainlink node instance. Increasing this number can help to improve performance under database-heavy workloads.
-
-Postgres has connection limits, so you must use caution when increasing this value. If you are running several instances of a Chainlink node or another application on a single database server, you might run out of Postgres connection slots if you raise this value too high.
-
-### MaxOpenConns
-
-```toml
-MaxOpenConns = 20 # Default
-```
-
-MaxOpenConns configures the maximum number of database connections that a Chainlink node will have open at any one time. Think of this as the maximum burst upper bound limit of database connections per Chainlink node instance. Increasing this number can help to improve performance under database-heavy workloads.
-
-Postgres has connection limits, so you must use caution when increasing this value. If you are running several instances of a Chainlink node or another application on a single database server, you might run out of Postgres connection slots if you raise this value too high.
-
-### MigrateOnStartup
-
-```toml
-MigrateOnStartup = true # Default
-```
-
-MigrateOnStartup controls whether a Chainlink node will attempt to automatically migrate the database on boot. If you want more control over your database migration process, set this variable to `false` and manually migrate the database using the CLI `migrate` command instead.
-
-## Database.Backup
-
-```toml
-[Database.Backup]
-Mode = 'none' # Default
-Dir = 'test/backup/dir' # Example
-OnVersionUpgrade = true # Default
-Frequency = '1h' # Default
-```
-
-As a best practice, take regular database backups in case of accidental data loss. This best practice is especially important when you upgrade your Chainlink node to a new version. Chainlink nodes support automated database backups to make this process easier.
-
-NOTE: Dumps can cause high load and massive database latencies, which will negatively impact the normal functioning of the Chainlink node. For this reason, it is recommended to set a `URL` and point it to a read replica if you enable automatic backups.
-
-### Mode
-
-```toml
-Mode = 'none' # Default
-```
-
-Mode sets the type of automatic database backup, which can be one of _none_, `lite`, or `full`. If enabled, the Chainlink node will always dump a backup on every boot before running migrations. Additionally, it will automatically take database backups that overwrite the backup file for the given version at regular intervals if `Frequency` is set to a non-zero interval.
-
-_none_ - Disables backups.
-`lite` - Dumps small tables including configuration and keys that are essential for the node to function, which excludes historical data like job runs, transaction history, etc.
-`full` - Dumps the entire database.
-
-It will write to a file like `'Dir'/backup/cl_backup_<VERSION>.dump`. There is one backup dump file per version of the Chainlink node. If you upgrade the node, it will keep the backup taken right before the upgrade migration so you can restore to an older version if necessary.
-
-### Dir
-
-```toml
-Dir = 'test/backup/dir' # Example
-```
-
-Dir sets the directory to use for saving the backup file. Use this if you want to save the backup file in a directory other than the default ROOT directory.
-
-### OnVersionUpgrade
-
-```toml
-OnVersionUpgrade = true # Default
-```
-
-OnVersionUpgrade enables automatic backups of the database before running migrations, when you are upgrading to a new version.
-
-### Frequency
-
-```toml
-Frequency = '1h' # Default
-```
-
-Frequency sets the interval for database dumps, if set to a positive duration and `Mode` is not _none_.
-
-Set to `0` to disable periodic backups.
-
-## Database.Listener
-
-⚠️ **_ADVANCED_**: _Do not change these settings unless you know what you are doing._
-
-```toml
-[Database.Listener]
-MaxReconnectDuration = '10m' # Default
-MinReconnectInterval = '1m' # Default
-FallbackPollInterval = '30s' # Default
-```
-
-These settings control the postgres event listener.
-
-### MaxReconnectDuration
-
-```toml
-MaxReconnectDuration = '10m' # Default
-```
-
-MaxReconnectDuration is the maximum duration to wait between reconnect attempts.
-
-### MinReconnectInterval
-
-```toml
-MinReconnectInterval = '1m' # Default
-```
-
-MinReconnectInterval controls the duration to wait before trying to re-establish the database connection after connection loss. After each consecutive failure this interval is doubled, until MaxReconnectInterval is reached. Successfully completing the connection establishment procedure resets the interval back to MinReconnectInterval.
-
-### FallbackPollInterval
-
-```toml
-FallbackPollInterval = '30s' # Default
-```
-
-FallbackPollInterval controls how often clients should manually poll as a fallback in case the postgres event was missed/dropped.
-
-## Database.Lock
-
-⚠️ **_ADVANCED_**: _Do not change these settings unless you know what you are doing._
-
-```toml
-[Database.Lock]
-Enabled = true # Default
-LeaseDuration = '10s' # Default
-LeaseRefreshInterval = '1s' # Default
-```
-
-Ideally, you should use a container orchestration system like [Kubernetes](https://kubernetes.io/) to ensure that only one Chainlink node instance can ever use a specific Postgres database. However, some node operators do not have the technical capacity to do this. Common use cases run multiple Chainlink node instances in failover mode as recommended by our official documentation. The first instance takes a lock on the database and subsequent instances will wait trying to take this lock in case the first instance fails.
-
-- If your nodes or applications hold locks open for several hours or days, Postgres is unable to complete internal cleanup tasks. The Postgres maintainers explicitly discourage holding locks open for long periods of time.
-
-Because of the complications with advisory locks, Chainlink nodes with v2.0 and later only support `lease` locking mode. The `lease` locking mode works using the following process:
-
-- Node A creates one row in the database with the client ID and updates it once per second.
-- Node B spinlocks and checks periodically to see if the client ID is too old. If the client ID is not updated after a period of time, node B assumes that node A failed and takes over. Node B becomes the owner of the row and updates the client ID once per second.
-- If node A comes back, it attempts to take out a lease, realizes that the database has been leased to another process, and exits the entire application immediately.
-
-### Enabled
-
-```toml
-Enabled = true # Default
-```
-
-Enabled enables the database lock.
-
-### LeaseDuration
-
-```toml
-LeaseDuration = '10s' # Default
-```
-
-LeaseDuration is how long the lease lock will last before expiring.
-
-### LeaseRefreshInterval
-
-```toml
-LeaseRefreshInterval = '1s' # Default
-```
-
-LeaseRefreshInterval determines how often to refresh the lease lock. Also controls how often a standby node will check to see if it can grab the lease.
 
 ## TelemetryIngress
 
@@ -535,213 +331,6 @@ MaxBackups = 1 # Default
 ```
 
 MaxBackups determines the maximum number of old log files to retain. Keeping this config with the default value retains all old log files. The `MaxAgeDays` variable can still cause them to get deleted.
-
-## WebServer
-
-```toml
-[WebServer]
-AllowOrigins = 'http://localhost:3000,http://localhost:6688' # Default
-BridgeCacheTTL = '0s' # Default
-BridgeResponseURL = 'https://my-chainlink-node.example.com:6688' # Example
-HTTPWriteTimeout = '10s' # Default
-HTTPPort = 6688 # Default
-SecureCookies = true # Default
-SessionTimeout = '15m' # Default
-SessionReaperExpiration = '240h' # Default
-```
-
-### AllowOrigins
-
-```toml
-AllowOrigins = 'http://localhost:3000,http://localhost:6688' # Default
-```
-
-AllowOrigins controls the URLs Chainlink nodes emit in the `Allow-Origins` header of its API responses. The setting can be a comma-separated list with no spaces. You might experience CORS issues if this is not set correctly.
-
-You should set this to the external URL that you use to access the Chainlink UI.
-
-You can set `AllowOrigins = '*'` to allow the UI to work from any URL, but it is recommended for security reasons to make it explicit instead.
-
-### BridgeCacheTTL
-
-```toml
-BridgeCacheTTL = '0s' # Default
-```
-
-BridgeCacheTTL controls the cache TTL for all bridge tasks to use old values in newer observations in case of intermittent failure. It's disabled by default.
-
-### BridgeResponseURL
-
-```toml
-BridgeResponseURL = 'https://my-chainlink-node.example.com:6688' # Example
-```
-
-BridgeResponseURL defines the URL for bridges to send a response to. This _must_ be set when using async external adapters.
-
-Usually this will be the same as the URL/IP and port you use to connect to the Chainlink UI.
-
-### HTTPWriteTimeout
-
-⚠️ **_ADVANCED_**: _Do not change this setting unless you know what you are doing._
-
-```toml
-HTTPWriteTimeout = '10s' # Default
-```
-
-HTTPWriteTimeout controls how long the Chainlink node's API server can hold a socket open for writing a response to an HTTP request. Sometimes, this must be increased for pprof.
-
-### HTTPPort
-
-```toml
-HTTPPort = 6688 # Default
-```
-
-HTTPPort is the port used for the Chainlink Node API, CLI, and GUI.
-
-### SecureCookies
-
-```toml
-SecureCookies = true # Default
-```
-
-SecureCookies requires the use of secure cookies for authentication. Set to false to enable standard HTTP requests along with `TLSPort = 0`.
-
-### SessionTimeout
-
-```toml
-SessionTimeout = '15m' # Default
-```
-
-SessionTimeout determines the amount of idle time to elapse before session cookies expire. This signs out GUI users from their sessions.
-
-### SessionReaperExpiration
-
-```toml
-SessionReaperExpiration = '240h' # Default
-```
-
-SessionReaperExpiration represents how long an API session lasts before expiring and requiring a new login.
-
-## WebServer.RateLimit
-
-```toml
-[WebServer.RateLimit]
-Authenticated = 1000 # Default
-AuthenticatedPeriod = '1m' # Default
-Unauthenticated = 5 # Default
-UnauthenticatedPeriod = '20s' # Default
-```
-
-### Authenticated
-
-```toml
-Authenticated = 1000 # Default
-```
-
-Authenticated defines the threshold to which authenticated requests get limited. More than this many authenticated requests per `AuthenticatedRateLimitPeriod` will be rejected.
-
-### AuthenticatedPeriod
-
-```toml
-AuthenticatedPeriod = '1m' # Default
-```
-
-AuthenticatedPeriod defines the period to which authenticated requests get limited.
-
-### Unauthenticated
-
-```toml
-Unauthenticated = 5 # Default
-```
-
-Unauthenticated defines the threshold to which authenticated requests get limited. More than this many unauthenticated requests per `UnAuthenticatedRateLimitPeriod` will be rejected.
-
-### UnauthenticatedPeriod
-
-```toml
-UnauthenticatedPeriod = '20s' # Default
-```
-
-UnauthenticatedPeriod defines the period to which unauthenticated requests get limited.
-
-## WebServer.MFA
-
-```toml
-[WebServer.MFA]
-RPID = 'localhost' # Example
-RPOrigin = 'http://localhost:6688/' # Example
-```
-
-The Operator UI frontend supports enabling Multi Factor Authentication via Webauthn per account. When enabled, logging in will require the account password and a hardware or OS security key such as Yubikey. To enroll, log in to the operator UI and click the circle purple profile button at the top right and then click **Register MFA Token**. Tap your hardware security key or use the OS public key management feature to enroll a key. Next time you log in, this key will be required to authenticate.
-
-### RPID
-
-```toml
-RPID = 'localhost' # Example
-```
-
-RPID is the FQDN of where the Operator UI is served. When serving locally, the value should be `localhost`.
-
-### RPOrigin
-
-```toml
-RPOrigin = 'http://localhost:6688/' # Example
-```
-
-RPOrigin is the origin URL where WebAuthn requests initiate, including scheme and port. When serving locally, the value should be `http://localhost:6688/`.
-
-## WebServer.TLS
-
-```toml
-[WebServer.TLS]
-CertPath = '~/.cl/certs' # Example
-Host = 'tls-host' # Example
-KeyPath = '/home/$USER/.chainlink/tls/server.key' # Example
-HTTPSPort = 6689 # Default
-ForceRedirect = false # Default
-```
-
-The TLS settings apply only if you want to enable TLS security on your Chainlink node.
-
-### CertPath
-
-```toml
-CertPath = '~/.cl/certs' # Example
-```
-
-CertPath is the location of the TLS certificate file.
-
-### Host
-
-```toml
-Host = 'tls-host' # Example
-```
-
-Host is the hostname configured for TLS to be used by the Chainlink node. This is useful if you configured a domain name specific for your Chainlink node.
-
-### KeyPath
-
-```toml
-KeyPath = '/home/$USER/.chainlink/tls/server.key' # Example
-```
-
-KeyPath is the location of the TLS private key file.
-
-### HTTPSPort
-
-```toml
-HTTPSPort = 6689 # Default
-```
-
-HTTPSPort is the port used for HTTPS connections. Set this to `0` to disable HTTPS. Disabling HTTPS also relieves Chainlink nodes of the requirement for a TLS certificate.
-
-### ForceRedirect
-
-```toml
-ForceRedirect = false # Default
-```
-
-ForceRedirect forces TLS redirect for unencrypted connections.
 
 ## JobPipeline
 
@@ -1707,328 +1296,6 @@ DisableRateLimiting = false # Default
 ```
 
 DisableRateLimiting skips ratelimiting on asset requests.
-
-## Cosmos
-
-```toml
-[[Cosmos]]
-ChainID = 'Malaga-420' # Example
-Enabled = true # Default
-BlockRate = '6s' # Default
-BlocksUntilTxTimeout = 30 # Default
-ConfirmPollPeriod = '1s' # Default
-FallbackGasPriceUAtom = '0.015' # Default
-FCDURL = 'http://cosmos.com' # Example
-GasLimitMultiplier = '1.5' # Default
-MaxMsgsPerBatch = 100 # Default
-OCR2CachePollPeriod = '4s' # Default
-OCR2CacheTTL = '1m' # Default
-TxMsgTimeout = '10m' # Default
-```
-
-### ChainID
-
-```toml
-ChainID = 'Malaga-420' # Example
-```
-
-ChainID is the Cosmos chain ID. Mandatory.
-
-### Enabled
-
-```toml
-Enabled = true # Default
-```
-
-Enabled enables this chain.
-
-### BlockRate
-
-```toml
-BlockRate = '6s' # Default
-```
-
-BlockRate is the average time between blocks.
-
-### BlocksUntilTxTimeout
-
-```toml
-BlocksUntilTxTimeout = 30 # Default
-```
-
-BlocksUntilTxTimeout is the number of blocks to wait before giving up on the tx getting confirmed.
-
-### ConfirmPollPeriod
-
-```toml
-ConfirmPollPeriod = '1s' # Default
-```
-
-ConfirmPollPeriod sets how often check for tx confirmation.
-
-### FallbackGasPriceUAtom
-
-```toml
-FallbackGasPriceUAtom = '0.015' # Default
-```
-
-FallbackGasPriceUAtom sets a fallback gas price to use when the estimator is not available.
-
-### FCDURL
-
-```toml
-FCDURL = 'http://cosmos.com' # Example
-```
-
-FCDURL sets the FCD (Full Client Daemon) URL.
-
-### GasLimitMultiplier
-
-```toml
-GasLimitMultiplier = '1.5' # Default
-```
-
-GasLimitMultiplier scales the estimated gas limit.
-
-### MaxMsgsPerBatch
-
-```toml
-MaxMsgsPerBatch = 100 # Default
-```
-
-MaxMsgsPerBatch limits the numbers of mesages per transaction batch.
-
-### OCR2CachePollPeriod
-
-```toml
-OCR2CachePollPeriod = '4s' # Default
-```
-
-OCR2CachePollPeriod is the rate to poll for the OCR2 state cache.
-
-### OCR2CacheTTL
-
-```toml
-OCR2CacheTTL = '1m' # Default
-```
-
-OCR2CacheTTL is the stale OCR2 cache deadline.
-
-### TxMsgTimeout
-
-```toml
-TxMsgTimeout = '10m' # Default
-```
-
-TxMsgTimeout is the maximum age for resending transaction before they expire.
-
-## Cosmos.Nodes
-
-```toml
-[[Cosmos.Nodes]]
-Name = 'primary' # Example
-TendermintURL = 'http://tender.mint' # Example
-```
-
-### Name
-
-```toml
-Name = 'primary' # Example
-```
-
-Name is a unique (per-chain) identifier for this node.
-
-### TendermintURL
-
-```toml
-TendermintURL = 'http://tender.mint' # Example
-```
-
-TendermintURL is the HTTP(S) tendermint endpoint for this node.
-
-## Solana
-
-```toml
-[[Solana]]
-ChainID = 'mainnet' # Example
-Enabled = false # Default
-BalancePollPeriod = '5s' # Default
-ConfirmPollPeriod = '500ms' # Default
-OCR2CachePollPeriod = '1s' # Default
-OCR2CacheTTL = '1m' # Default
-TxTimeout = '1m' # Default
-TxRetryTimeout = '10s' # Default
-TxConfirmTimeout = '30s' # Default
-SkipPreflight = true # Default
-Commitment = 'confirmed' # Default
-MaxRetries = 0 # Default
-FeeEstimatorMode = 'fixed' # Default
-ComputeUnitPriceMax = 1000 # Default
-ComputeUnitPriceMin = 0 # Default
-ComputeUnitPriceDefault = 0 # Default
-FeeBumpPeriod = '3s' # Default
-```
-
-### ChainID
-
-```toml
-ChainID = 'mainnet' # Example
-```
-
-ChainID is the Solana chain ID. Must be one of: mainnet, testnet, devnet, localnet. Mandatory.
-
-### Enabled
-
-```toml
-Enabled = false # Default
-```
-
-Enabled enables this chain.
-
-### BalancePollPeriod
-
-```toml
-BalancePollPeriod = '5s' # Default
-```
-
-BalancePollPeriod is the rate to poll for SOL balance and update Prometheus metrics.
-
-### ConfirmPollPeriod
-
-```toml
-ConfirmPollPeriod = '500ms' # Default
-```
-
-ConfirmPollPeriod is the rate to poll for signature confirmation.
-
-### OCR2CachePollPeriod
-
-```toml
-OCR2CachePollPeriod = '1s' # Default
-```
-
-OCR2CachePollPeriod is the rate to poll for the OCR2 state cache.
-
-### OCR2CacheTTL
-
-```toml
-OCR2CacheTTL = '1m' # Default
-```
-
-OCR2CacheTTL is the stale OCR2 cache deadline.
-
-### TxTimeout
-
-```toml
-TxTimeout = '1m' # Default
-```
-
-TxTimeout is the timeout for sending txes to an RPC endpoint.
-
-### TxRetryTimeout
-
-```toml
-TxRetryTimeout = '10s' # Default
-```
-
-TxRetryTimeout is the duration for tx manager to attempt rebroadcasting to RPC, before giving up.
-
-### TxConfirmTimeout
-
-```toml
-TxConfirmTimeout = '30s' # Default
-```
-
-TxConfirmTimeout is the duration to wait when confirming a tx signature, before discarding as unconfirmed.
-
-### SkipPreflight
-
-```toml
-SkipPreflight = true # Default
-```
-
-SkipPreflight enables or disables preflight checks when sending txs.
-
-### Commitment
-
-```toml
-Commitment = 'confirmed' # Default
-```
-
-Commitment is the confirmation level for solana state and transactions. ([documentation](https://docs.solana.com/developing/clients/jsonrpc-api#configuring-state-commitment))
-
-### MaxRetries
-
-```toml
-MaxRetries = 0 # Default
-```
-
-MaxRetries is the maximum number of times the RPC node will automatically rebroadcast a tx.
-The default is 0 for custom txm rebroadcasting method, set to -1 to use the RPC node's default retry strategy.
-
-### FeeEstimatorMode
-
-```toml
-FeeEstimatorMode = 'fixed' # Default
-```
-
-FeeEstimatorMode is the method used to determine the base fee
-
-### ComputeUnitPriceMax
-
-```toml
-ComputeUnitPriceMax = 1000 # Default
-```
-
-ComputeUnitPriceMax is the maximum price per compute unit that a transaction can be bumped to
-
-### ComputeUnitPriceMin
-
-```toml
-ComputeUnitPriceMin = 0 # Default
-```
-
-ComputeUnitPriceMin is the minimum price per compute unit that transaction can have
-
-### ComputeUnitPriceDefault
-
-```toml
-ComputeUnitPriceDefault = 0 # Default
-```
-
-ComputeUnitPriceDefault is the default price per compute unit price, and the starting base fee when FeeEstimatorMode = 'fixed'
-
-### FeeBumpPeriod
-
-```toml
-FeeBumpPeriod = '3s' # Default
-```
-
-FeeBumpPeriod is the amount of time before a tx is retried with a fee bump
-
-## Solana.Nodes
-
-```toml
-[[Solana.Nodes]]
-Name = 'primary' # Example
-URL = 'http://solana.web' # Example
-```
-
-### Name
-
-```toml
-Name = 'primary' # Example
-```
-
-Name is a unique (per-chain) identifier for this node.
-
-### URL
-
-```toml
-URL = 'http://solana.web' # Example
-```
-
-URL is the HTTP(S) endpoint for this node.
 
 ## Starknet
 
