--- a/src/pages/ccip/architecture.mdx
+++ b/src/pages/ccip/architecture.mdx
@@ -105,7 +105,7 @@ The ARM contract maintains the list of ARM nodes' addresses allowed to bless/cur
 The Committing DON has several jobs where each job monitors cross-chain transactions between a given source blockchain and destination blockchain:
 
 - Each job monitors events from a given [OnRamp contract](#onramp) on the source blockchain.
-- The job waits for [finality](/ccip/concepts#finality), which depends one the source blockchain.
+- The job waits for [finality](/ccip/concepts#finality), which depends on the source blockchain.
 - The job bundles transactions and creates a Merkle root. This Merkle root is signed by a quorum of oracles nodes part of the Committing DON.
 - Finally, the job writes the Merkle root to the [CommitStore contract](#commit-store) on the given destination blockchain.
 
