Add ethereum mainet -> avalanche mainnet lane

--- a/src/pages/ccip/supported-networks.mdx
+++ b/src/pages/ccip/supported-networks.mdx
@@ -67,6 +67,10 @@ Across all networks, CCIP transactions are subject to the following service limi
 
 Token transfers are not supported on this lane.
 
+#### Ethereum Mainnet → Avalanche Mainnet Lane
+
+Token transfers are not supported on this lane.
+
 ### Ethereum Sepolia
 
 | Parameter            | Value                                                                                                                                                                                                                                                                                                  |
