--- a/src/pages/ccip/test-tokens.mdx
+++ b/src/pages/ccip/test-tokens.mdx
@@ -63,7 +63,7 @@ Follow these steps to learn how to mint these tokens. The steps explain how to m
     alt="Chainlink CCIP Test token etherscan connected to web3."
   />
 
-- Fill in the text field with your EOA address, then click _Write_.
+- Fill in the text field with your EOA, then click _Write_.
 - MetaMask will open and asks you to confirm the transaction.
 - After the transaction is confirmed, click _View your transaction_ to view your transaction.
 
